--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -360,153 +360,145 @@ table {
   *zoom: 1; }
 
 /* colors */
-.new-section {
-  float: left; }
-
-hr {
-  height: 14px;
-  /* specify a height for this hr */
-  overflow: hidden;
-  border: none; }
-  hr:after {
-    content: "..................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................";
-    letter-spacing: 4px;
-    /* Use letter-spacing to increase space between dots*/ }
-
-h1 {
-  font-size: 6.4em;
-  text-align: center;
-  width: 100%; }
-
-body {
+.home {
   background-image: url("/img/gingam.gif");
-  background-size: 90px; }
-
-header {
-  background: #ff0200;
-  width: 200px;
-  height: 70px;
-  font-size: 6.4em;
-  text-align: center;
-  color: white;
-  font-family: 'Stalemate', cursive; }
-
-.separator {
-  background-image: url("/img/gingam.gif");
-  background-size: 35px;
-  height: 10px;
-  margin: 0px auto; }
-
-.wrapper {
-  width: 100%;
-  margin-top: 30px;
-  padding-top: 30px;
-  background-color: white; }
-
-.ending {
-  content: ' ';
-  display: block;
-  position: relative;
-  width: 100%;
-  height: 400px;
-  background-image: -webkit-linear-gradient( white, rgba(255, 255, 255, 0.5) 50%, black);
-  background-image: linear-gradient( white, rgba(255, 255, 255, 0.5) 50%, black); }
-  .ending .napkin {
-    width: 0;
-    height: 0;
-    border-top: 80px solid transparent;
-    border-bottom: 80px solid transparent;
-    border-right: 80px solid white;
-    -webkit-filter: drop-shadow(0px 0px 5px rgba(51, 51, 51, 0.6));
-    filter: drop-shadow(0px 0px 15px rgba(51, 51, 51, 0.6));
-    position: absolute;
-    top: 50%;
-    left: 50%; }
-    .ending .napkin:first-child {
-      z-index: 2;
-      margin: -80px 0 0 -250px; }
-    .ending .napkin:nth-child(2) {
-      z-index: 1;
-      margin: -75px 0 0 -250px;
-      -webkit-transform: rotate(-1deg); }
-  .ending .fork {
-    z-index: 3;
-    -webkit-filter: drop-shadow(0px 0px 5px rgba(51, 51, 51, 0.6));
-    filter: drop-shadow(0px 0px 15px rgba(51, 51, 51, 0.6));
-    width: 30px;
-    height: 175px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: -80px 0 0 -200px; }
-  .ending .knife-spoon {
-    z-index: 1;
-    -webkit-filter: drop-shadow(0px 0px 5px rgba(51, 51, 51, 0.6));
-    filter: drop-shadow(0px 0px 15px rgba(51, 51, 51, 0.6));
-    width: 100px;
-    height: 175px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: -80px 0 0 175px; }
-  .ending .plate {
-    background: white;
-    border-radius: 50%;
-    box-shadow: 0px 0px 25px rgba(51, 51, 51, 0.6);
-    width: 240px;
-    height: 240px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: -120px 0 0 -120px; }
-    .ending .plate .center {
-      width: 80%;
-      height: 80%;
+  background-size: 90px;
+  background-position: 0px 65px; }
+  .home .new-section {
+    float: left; }
+  .home hr {
+    height: 14px;
+    /* specify a height for this hr */
+    overflow: hidden;
+    border: none; }
+    .home hr:after {
+      content: "..................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................";
+      letter-spacing: 4px;
+      /* Use letter-spacing to increase space between dots*/ }
+  .home h1 {
+    font-size: 6.4em;
+    text-align: center;
+    width: 100%; }
+  .home header {
+    background: #ff0200;
+    width: 200px;
+    height: 70px;
+    font-size: 6.4em;
+    text-align: center;
+    color: white;
+    font-family: 'Stalemate', cursive; }
+  .home .separator {
+    background-image: url("/img/gingam.gif");
+    background-size: 35px;
+    height: 10px;
+    margin: 0px auto; }
+  .home .wrapper {
+    width: 100%;
+    margin-top: 3px;
+    padding-top: 30px;
+    background-color: white; }
+  .home .ending {
+    content: ' ';
+    display: block;
+    position: relative;
+    width: 100%;
+    height: 400px;
+    background-image: -webkit-linear-gradient( white, rgba(255, 255, 255, 0.5) 50%, black);
+    background-image: linear-gradient( white, rgba(255, 255, 255, 0.5) 50%, black); }
+    .home .ending .napkin {
+      width: 0;
+      height: 0;
+      border-top: 80px solid transparent;
+      border-bottom: 80px solid transparent;
+      border-right: 80px solid white;
+      -webkit-filter: drop-shadow(0px 0px 5px rgba(51, 51, 51, 0.6));
+      filter: drop-shadow(0px 0px 15px rgba(51, 51, 51, 0.6));
+      position: absolute;
+      top: 50%;
+      left: 50%; }
+      .home .ending .napkin:first-child {
+        z-index: 2;
+        margin: -80px 0 0 -250px; }
+      .home .ending .napkin:nth-child(2) {
+        z-index: 1;
+        margin: -75px 0 0 -250px;
+        -webkit-transform: rotate(-1deg); }
+    .home .ending .fork {
+      z-index: 3;
+      -webkit-filter: drop-shadow(0px 0px 5px rgba(51, 51, 51, 0.6));
+      filter: drop-shadow(0px 0px 15px rgba(51, 51, 51, 0.6));
+      width: 30px;
+      height: 175px;
       position: absolute;
       top: 50%;
       left: 50%;
-      margin: -40% 0 0 -40%;
-      background-color: rgba(223, 224, 226, 0.15);
+      margin: -80px 0 0 -200px; }
+    .home .ending .knife-spoon {
+      z-index: 1;
+      -webkit-filter: drop-shadow(0px 0px 5px rgba(51, 51, 51, 0.6));
+      filter: drop-shadow(0px 0px 15px rgba(51, 51, 51, 0.6));
+      width: 100px;
+      height: 175px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin: -80px 0 0 175px; }
+    .home .ending .plate {
+      background: white;
       border-radius: 50%;
-      box-shadow: 0 0 0 7px white, 0 0 0 10px rgba(223, 224, 226, 0.3); }
-
-.menu {
-  text-align: center;
-  padding: 0px; }
-  .menu li {
-    padding: 30px;
-    list-style: none;
-    width: 33.33%;
-    float: left; }
-    .menu li h2 {
-      font-size: 3.6em;
-      width: 100%;
-      line-height: 1em; }
-    .menu li .separator {
-      width: 80%; }
-    .menu li .img {
-      border-radius: 50%;
-      width: 200px;
-      height: 200px;
-      margin: 10px auto;
-      background-color: rgba(242, 242, 242, 0.3); }
-    .menu li p {
-      font-size: 1.6em; }
-
-footer {
-  display: table;
-  font-size: 1.9em;
-  font-weight: 600;
-  color: white;
-  height: 100px;
-  background: black;
-  width: 100%;
-  text-align: center; }
-  footer p {
-    display: table-cell;
-    vertical-align: middle; }
-    footer p span {
-      color: #ff0200; }
+      box-shadow: 0px 0px 25px rgba(51, 51, 51, 0.6);
+      width: 240px;
+      height: 240px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      margin: -120px 0 0 -120px; }
+      .home .ending .plate .center {
+        width: 80%;
+        height: 80%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: -40% 0 0 -40%;
+        background-color: rgba(223, 224, 226, 0.15);
+        border-radius: 50%;
+        box-shadow: 0 0 0 7px white, 0 0 0 10px rgba(223, 224, 226, 0.3); }
+  .home .menu {
+    text-align: center;
+    padding: 0px; }
+    .home .menu li {
+      padding: 30px;
+      list-style: none;
+      width: 33.33%;
+      float: left; }
+      .home .menu li h2 {
+        font-size: 3.6em;
+        width: 100%;
+        line-height: 1em; }
+      .home .menu li .separator {
+        width: 80%; }
+      .home .menu li .img {
+        border-radius: 50%;
+        width: 200px;
+        height: 200px;
+        margin: 10px auto;
+        background-color: rgba(242, 242, 242, 0.3); }
+      .home .menu li p {
+        font-size: 1.6em; }
+  .home footer {
+    display: table;
+    font-size: 1.9em;
+    font-weight: 400;
+    color: white;
+    height: 100px;
+    background: black;
+    width: 100%;
+    text-align: center; }
+    .home footer p {
+      display: table-cell;
+      vertical-align: middle; }
+      .home footer p span {
+        color: #ff0200; }
 
 body {
   font-weight: 400;
